--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -18,6 +18,7 @@ runtimes:
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   enabled:
+    - osv-scanner@1.8.5
     - yamllint@1.35.1
     - bandit@1.7.10
     - black@24.8.0
