Refactor and update project configuration and scripts
- Updated bug report template
- Modified trunk actions and logs
- Added multiple new trunk result files
- Updated VSCode settings
- Added new git hooks and configuration files
- Updated and added new sentry-db and server files
- Added new scripts for numpy and pytest

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,8 @@
     "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": true,
     "gitlens.views.repositories.compact": false,
-    "gitlens.views.repositories.files.compact": false
+    "gitlens.views.repositories.files.compact": false,
+    "yaml.schemas": {
+        "https://static.trunk.io/pub/trunk-yaml-schema.json": "file:///Users/abhimehrotra/Hydrograph-Versus-Seatek-Sensors-Project-1/.trunk/trunk.yaml"
+    }
 }
