--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,8 @@ celerybeat-schedule
 env/
 venv/
 ENV/
+# env.bak
+venv.bak/
 
 # Spyder project settings
 .spyderproject
@@ -77,15 +79,10 @@ ENV/
 
 # VSCode settings
 .vscode/
+.vscode/*
 
-# Data files
-data/raw/*.csv
-data/processed/*.csv
-*.xlsx
-
-# Output files
-visualizations/*.png
-visualizations/*.pdf
+# Logs
+*.log
 
 # OS generated files
 .DS_Store
