--- a/description
+++ b/description
@@ -1,1 +1,1 @@
-Unnamed repository; edit this file 'description' to name the repository.
+Hydrograph Versus Seatek Sensors Project: A comparative analysis of hydrograph and Seatek sensors.
