--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -18,6 +18,8 @@ runtimes:
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   enabled:
+    - actionlint@1.7.2
+    - actionlint@1.7.2
     - osv-scanner@1.8.5
     - yamllint@1.35.1
     - bandit@1.7.10
@@ -33,7 +35,7 @@ lint:
     - shfmt@3.6.0
     - svgo@3.3.2
     - taplo@0.9.3
-    - trufflehog@3.82.4
+    - trufflehog@3.82.5
 actions:
   disabled:
     - trunk-announce
