--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -17,6 +17,8 @@ runtimes:
     - python@3.10.8
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
+  disabled:
+    - git-diff-check
   enabled:
     - actionlint@1.7.2
     - actionlint@1.7.2
@@ -25,7 +27,6 @@ lint:
     - bandit@1.7.10
     - black@24.8.0
     - checkov@3.2.255
-    - git-diff-check
     - isort@5.13.2
     - markdownlint@0.42.0
     - oxipng@9.1.2
