--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+# This .gitignore file specifies the files and directories that should be ignored by Git.
+# It includes rules for:
+# - Byte-compiled, optimized, and DLL files
+# - C extensions
+# - Distribution and packaging directories and files
+# - PyInstaller files
+# - Installer logs
+# - Unit test and coverage reports
+# - Jupyter Notebook checkpoints
+# - pyenv version files
+# - Celery beat schedule files
+# - SageMath parsed files
+# - Virtual environment directories and files
+# - Spyder and Rope project settings
+# - mkdocs documentation site directory
+# - mypy cache
+# - VSCode settings
+# - Project-specific data, logs, and chart files
+# - Python cache files
+# - Virtual environment directories
+# - CSV and Excel files in the data directory
+# - PNG files in the output/charts directory
+# - Any log files
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -97,3 +120,15 @@ __pycache__/
 
 # Ignore virtual environment
 venv/
+
+# Ignore all CSV files in the data directory
+data/*.csv
+
+# Ignore all Excel files in the data directory
+data/*.xlsx
+
+# Ignore all PNG files in the output/charts directory
+output/charts/*.png
+
+# Ignore any log files
+*.log
