--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,10 +1,19 @@
 
 ```
- pandas==1.3.3
- matplotlib==3.4.3
- seaborn==0.11.2
- numpy==1.22.0
- openpyxl==3.0.9
- PyYAML==5.4.1
- pytest==6.2.5
+# Core dependencies
+pandas>=1.3.3,<1.4.0
+numpy>=1.22.0,<1.23.0
+
+# Data visualization
+matplotlib>=3.4.3,<3.5.0
+seaborn>=0.11.2,<0.12.0
+
+# Excel file handling
+openpyxl>=3.0.9,<3.1.0
+
+# YAML parsing
+PyYAML>=5.4.1,<5.5.0
+
+# Testing
+pytest>=6.2.5,<6.3.0
  ```
