Add issue and pull request templates, update documentation
- Create a new issue template for bug reports
- Add a pull request template to standardize submissions
- Update contributing guidelines for clarity
- Modify YAML and configuration files for consistency
- Revise CHANGELOG and SECURITY documentation
- Adjust formatting in various documentation files

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,4 @@
-
-```
-# Core dependencies
+# List of core dependencies required for the project
 pandas>=1.3.3,<1.4.0
 numpy>=1.22.0,<1.23.0
 
@@ -16,4 +14,3 @@ PyYAML>=5.4.1,<5.5.0
 
 # Testing
 pytest>=6.2.5,<6.3.0
- ```
