Update .gitignore to refine IDE and project file exclusions
Adjusted `.idea` and `.iml` exclusions for better handling of specific project files. Ensured essential `.iml` files are tracked while maintaining exclusions for unnecessary IDE and project files.

--- a/.gitignore
+++ b/.gitignore
@@ -122,13 +122,13 @@ Thumbs.db
 
 # JetBrains IDEs
 *.iml
-.idea/
 *.ipr
 *.iws
 out/
 
 # Python virtual environment
-venv/
 
 # Node modules
 node_modules/
+!/Hydrograph_Versus_Seatek_Sensors_Project/.idea/Hydrograph-Versus-Seatek-Sensors-Project.iml
+!/.idea/DataspellProjects.iml
