--- a/src/pyvenv.cfg
+++ b/src/pyvenv.cfg
@@ -1,3 +1,4 @@
-home = /Users/abhimehrotra/.pyenv/versions/3.10.4/bin
+# Extract the home directory as an environment variable or a configurable parameter
+home = ${PYTHON_HOME:-/Users/abhimehrotra/.pyenv/versions/3.10.4/bin}
 include-system-site-packages = false
 version = 3.10.4
