--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,27 +1,29 @@
 name: Pylint
-
 permissions: read-all
-
-on: [push]
-
+on: [ push ]
 jobs:
-  build:
+  lint-code:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version:
+          - "3.8"
+          - "3.9"
+          - "3.10"
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-    # - name: Install dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     pip install pylint
-    # - name: Analysing the code with pylint
-    #   run: |
-    #     pylint $(git ls-files '*.py')
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
 
+      - name: Analyse code with pylint
+        run: |
+          pylint $(git ls-files '*.py')
