--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -1,4 +1,5 @@
 name: Qodana
+
 on:
   workflow_dispatch:
   pull_request:
@@ -10,19 +11,15 @@ on:
 jobs:
   qodana:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-      checks: write
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
-          fetch-depth: 0  # a full history is required for pull request analysis
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2024.2
         with:
-          pr-mode: false
+          version: '2024.2'
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_736140003 }}
           QODANA_ENDPOINT: 'https://qodana.cloud'
