--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -11,11 +11,17 @@ on:
 jobs:
   qodana:
     runs-on: ubuntu-latest
+    permissions:
+      # Add explicit permissions for security
+      contents: read
+      security-events: write
+    
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4  # Consider upgrading to v4
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
           fetch-depth: 0
+      
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2024.2
         env:
