--- a/.gitignore
+++ b/.gitignore
@@ -1,134 +1,32 @@
-
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# Distribution / packaging
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+*.so
+.venv/
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Jupyter
+.ipynb_checkpoints/
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-*.cover
-*.py,cover
-.cache
-nosetests.xml
-coverage.xml
-*.coveragerc
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
+# Logs and Databases
 *.log
-local_settings.py
-
-# Flask stuff:
-instance/
-*.rdb
-
-# Scrapy stuff:
 *.sqlite3
 
-# Sphinx documentation
-docs/_build/
+# OS Generated Files
+.DS_Store
+Thumbs.db
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# Pytest
-.cache/
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# SQLAlchemy
-*.db
-
-# Celery
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Spyder project settings
-.spyderproject
-.spyderworkspace
-
-# Rope project settings
-.ropeproject
+# Coverage and testing
+.coverage
+htmlcov/
+.pytest_cache/
 
 # Environments
 .env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# mkdocs documentation
-/site
-
-# macOS metadata
-.DS_Store
-
-# Windows thumbnail cache files
-Thumbs.db
-*.stackdump
-
-# IDEs and editors
-.idea/
-.project
-.metadata
-*.sublime-workspace
-*.sublime-project
-
-# Visual Studio Code
-.vscode/
-*.code-workspace
-
-# JetBrains IDEs
-*.iml
-*.ipr
-*.iws
-out/
-
-# Python virtual environment
-
-# Node modules
-node_modules/
-!/Hydrograph_Versus_Seatek_Sensors_Project/.idea/Hydrograph-Versus-Seatek-Sensors-Project.iml
-!/.idea/DataspellProjects.iml
