--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,36 @@
-# Python
 __pycache__/
 *.py[cod]
 *$py.class
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
 
-# Virtual Environment
+dist/
+build/
+*.egg-info/
+
 .env
-.venv
 venv/
 ENV/
 
-# IDE
 .idea/
 .vscode/
 *.swp
 *.swo
 .run/
 
-# Project specific
-output/
-*.log
+.pytest_cache/
 .coverage
 htmlcov/
-.pytest_cache/
-.mypy_cache/
 
-# OS specific
 .DS_Store
-Thumbs.db
+*.log
+
+!src/
+!src/**
+!tests/
+!tests/**
+!config/
+!config/**
+!.github/
+!.github/**
+!pyproject.toml
+!config.yaml
+!.pre-commit-config.yaml
