Add new analysis and documentation files
	1.	Create a new Jupyter notebook for sensor analysis.
	2.	Write API documentation in Markdown format.
	3.	Improve test suite for better coverage.
	4.	Update GitHub workflows for streamlined CI/CD processes.
	5.	Revise README for enhanced project clarity and updated details.
	6.	Tweak pre-commit configuration for additional checks.

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,6 +1,6 @@
 name: Pylint
 permissions: read-all
-on: 
+on:
   push:
     branches:
       - main
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: [3.8, 3.9, 3.10]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -26,4 +26,4 @@ jobs:
 
       - name: Analyse code with pylint
         run: |
-          pylint $(git ls-files '*.py') || exit 0
+          pylint $(git ls-files '*.py') || true
