--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -1,15 +1,17 @@
-name: Python CI
+name: CI/CD Pipeline
 
 on:
   push:
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10', '3.11', '3.12']
+        python-version: ["3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v4
@@ -19,23 +21,28 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Install Poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python3 -
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
+        poetry install
 
-    - name: Lint with flake8
+    - name: Run tests with pytest
       run: |
-        pip install flake8
-        flake8 src tests
+        poetry run pytest --cov=src --cov-report=xml
 
-    - name: Type check with mypy
-      run: |
-        pip install mypy
-        mypy src
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml
 
-    - name: Test with pytest
+    - name: Run type checking
       run: |
-        pip install pytest
-        pytest tests/
+        poetry run mypy src
+
+    - name: Run linting
+      run: |
+        poetry run black --check src tests
+        poetry run flake8 src tests
