--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,20 +5,40 @@ repos:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
-    -   id: debug-statements
+    -   id: check-added-large-files
+    -   id: check-ast
+    -   id: check-json
+    -   id: check-merge-conflict
+    -   id: detect-private-key
 
 -   repo: https://github.com/psf/black
     rev: 24.3.0
     hooks:
     -   id: black
+        language_version: python3.10
 
 -   repo: https://github.com/PyCQA/flake8
     rev: 7.0.0
     hooks:
     -   id: flake8
+        additional_dependencies: [flake8-docstrings]
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.9.0
     hooks:
     -   id: mypy
         additional_dependencies: [types-all]
+
+-   repo: https://github.com/pycqa/isort
+    rev: 5.13.2
+    hooks:
+    -   id: isort
+        args: ["--profile", "black"]
+
+-   repo: https://github.com/nbQA-dev/nbQA
+    rev: 1.8.4
+    hooks:
+    -   id: nbqa-black
+        additional_dependencies: [black==24.3.0]
+    -   id: nbqa-isort
+        additional_dependencies: [isort==5.13.2]
