--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "hydrosensors"
-version = "0.1.0"
-description = "Compare Hydrograph and Seatek sensors"
+name = "hydrograph-seatek-analysis"
+version = "1.0.0"
+description = "Analysis of hydrograph and Seatek sensor data for river morphology studies"
 authors = ["Abhi Mehrotra <abhimhrtr@pm.me>"]
 readme = "README.md"
 packages = [{include = "src"}]
@@ -13,22 +13,31 @@ pandas = "^2.2.3"
 matplotlib = "^3.8.3"
 seaborn = "^0.13.2"
 scipy = "^1.12.0"
-requests = "^2.31.0"
-openpyxl = "^3.1.3"
-lxml = "^5.3.0"
-pillow = "^11.0.0"
-typing-extensions = "^4.10.0"
-colorlog = "^6.8.0"
-jinja2 = "^3.1.3"
+openpyxl = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.3.1"
-pytest-cov = "^5.0.0"
-black = "^24.3.0"
+pytest = "^8.0.0"
+pytest-cov = "^4.1.0"
+black = "^24.1.1"
 flake8 = "^7.0.0"
-mypy = "^1.9.0"
-ipython = "^8.22.2"
+mypy = "^1.8.0"
+pre-commit = "^3.5.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 88
+target-version = ['py310']
+
+[tool.mypy]
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+addopts = "-ra -q --cov=src"
